<resources>
    <string name="app_name">Marhaba</string>
    <string name="select_language">Select Language</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share_the_app">Share the App</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="see_all">SEE ALL</string>
    <string name="login_username">UserMsisdn</string>
    <string name="sign_in">Submit</string>
    <string name="login_pass">Enter OTP</string>
    <string name="search_hint_ar">Search Country</string>
    <string name="no_result_found_ar">No results found</string>
    <string name="code">Enter OTP </string>
    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="no_result_found">No result found</string>
    <string name="select_country">Select county</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="message_something_wrong">Something went wrong.Please try again later.</string>
    <string name="country_ascension_island_name">Ascension Island</string>
    <string name="country_ascension_island_code">ac</string>
    <string name="country_ascension_island_number" translatable="false">247</string>
    <string name="country_afghanistan_name">Afghanistan</string>
    <string name="country_afghanistan_code">af</string>
    <string name="country_afghanistan_number" translatable="false">93</string>
    <string name="country_albania_name">Albania</string>
    <string name="country_albania_code">al</string>
    <string name="country_albania_number" translatable="false">355</string>
    <string name="country_algeria_name">Algeria</string>
    <string name="country_algeria_code">dz</string>
    <string name="country_algeria_number" translatable="false">213</string>
    <string name="country_american_samoa_name">American Samoa</string>
    <string name="country_american_samoa_code">as</string>
    <string name="country_american_samoa_number" translatable="false">1</string>
    <string name="country_andorra_name">Andorra</string>
    <string name="country_andorra_code">ad</string>
    <string name="country_andorra_number" translatable="false">376</string>
    <string name="country_angola_name">Angola</string>
    <string name="country_angola_code">ao</string>
    <string name="country_angola_number" translatable="false">244</string>
    <string name="country_anguilla_name">Anguilla</string>
    <string name="country_anguilla_code">ai</string>
    <string name="country_anguilla_number" translatable="false">1</string>
    <string name="country_antarctica_name">Antarctica</string>
    <string name="country_antarctica_code">aq</string>
    <string name="country_antarctica_number" translatable="false">672</string>
    <string name="country_antigua_and_barbuda_name">Antigua and Barbuda</string>
    <string name="country_antigua_and_barbuda_code">ag</string>
    <string name="country_antigua_and_barbuda_number" translatable="false">1</string>
    <string name="country_argentina_name">Argentina</string>
    <string name="country_argentina_code">ar</string>
    <string name="country_argentina_number" translatable="false">54</string>
    <string name="country_armenia_name">Armenia</string>
    <string name="country_armenia_code">am</string>
    <string name="country_armenia_number" translatable="false">374</string>
    <string name="country_aruba_name">Aruba</string>
    <string name="country_aruba_code">aw</string>
    <string name="country_aruba_number" translatable="false">297</string>
    <string name="country_australia_name">Australia</string>
    <string name="country_australia_code">au</string>
    <string name="country_australia_number" translatable="false">61</string>
    <string name="country_austria_name">Austria</string>
    <string name="country_austria_code">at</string>
    <string name="country_austria_number" translatable="false">43</string>
    <string name="country_aland_islands_name">Aland Islands</string>
    <string name="country_aland_islands_code">ax</string>
    <string name="country_aland_islands_number" translatable="false">358</string>
    <string name="country_azerbaijan_name">Azerbaijan</string>
    <string name="country_azerbaijan_code">az</string>
    <string name="country_azerbaijan_number" translatable="false">994</string>
    <string name="country_bahamas_name">Bahamas</string>
    <string name="country_bahamas_code">bs</string>
    <string name="country_bahamas_number" translatable="false">1</string>
    <string name="country_bahrain_name">Bahrain</string>
    <string name="country_bahrain_code">bh</string>
    <string name="country_bahrain_number" translatable="false">973</string>
    <string name="country_bangladesh_name">Bangladesh</string>
    <string name="country_bangladesh_code">bd</string>
    <string name="country_bangladesh_number" translatable="false">880</string>
    <string name="country_barbados_name">Barbados</string>
    <string name="country_barbados_code">bb</string>
    <string name="country_barbados_number" translatable="false">1</string>
    <string name="country_belarus_name">Belarus</string>
    <string name="country_belarus_code">by</string>
    <string name="country_belarus_number" translatable="false">375</string>
    <string name="country_belgium_name">Belgium</string>
    <string name="country_belgium_code">be</string>
    <string name="country_belgium_number" translatable="false">32</string>
    <string name="country_belize_name">Belize</string>
    <string name="country_belize_code">bz</string>
    <string name="country_belize_number" translatable="false">501</string>
    <string name="country_benin_name">Benin</string>
    <string name="country_benin_code">bj</string>
    <string name="country_benin_number" translatable="false">229</string>
    <string name="country_bermuda_name">Bermuda</string>
    <string name="country_bermuda_code">bm</string>
    <string name="country_bermuda_number" translatable="false">1</string>
    <string name="country_bhutan_name">Bhutan</string>
    <string name="country_bhutan_code">bt</string>
    <string name="country_bhutan_number" translatable="false">975</string>
    <string name="country_bolivia_name">Bolivia</string>
    <string name="country_bolivia_code">bo</string>
    <string name="country_bolivia_number" translatable="false">591</string>
    <string name="country_bosnia_and_herzegovina_name">Bosnia And Herzegovina</string>
    <string name="country_bosnia_and_herzegovina_code">ba</string>
    <string name="country_bosnia_and_herzegovina_number" translatable="false">387</string>
    <string name="country_botswana_name">Botswana</string>
    <string name="country_botswana_code">bw</string>
    <string name="country_botswana_number" translatable="false">267</string>
    <string name="country_brazil_name">Brazil</string>
    <string name="country_brazil_code">br</string>
    <string name="country_brazil_number" translatable="false">55</string>
    <string name="country_british_virgin_islands_name">British Virgin Islands</string>
    <string name="country_british_virgin_islands_code">vg</string>
    <string name="country_british_virgin_islands_number" translatable="false">1</string>
    <string name="country_british_indian_ocean_territory_name">British Indian Ocean Territory</string>
    <string name="country_british_indian_ocean_territory_code">io</string>
    <string name="country_british_indian_ocean_territory_number" translatable="false">246</string>
    <string name="country_brunei_darussalam_name">Brunei Darussalam</string>
    <string name="country_brunei_darussalam_code">bn</string>
    <string name="country_brunei_darussalam_number" translatable="false">673</string>
    <string name="country_bouvet_island_name">Bouvet Island</string>
    <string name="country_bouvet_island_code">bv</string>
    <string name="country_bouvet_island_number" translatable="false">47</string>
    <string name="country_iceland_name">Iceland</string>
    <string name="country_iceland_code">is</string>
    <string name="country_iceland_number" translatable="false">354</string>
    <string name="country_bulgaria_name">Bulgaria</string>
    <string name="country_bulgaria_code">bg</string>
    <string name="country_bulgaria_number" translatable="false">359</string>
    <string name="country_burkina_faso_name">Burkina Faso</string>
    <string name="country_burkina_faso_code">bf</string>
    <string name="country_burkina_faso_number" translatable="false">226</string>
    <string name="country_burundi_name">Burundi</string>
    <string name="country_burundi_code">bi</string>
    <string name="country_burundi_number" translatable="false">257</string>
    <string name="country_cambodia_name">Cambodia</string>
    <string name="country_cambodia_code">kh</string>
    <string name="country_cambodia_number" translatable="false">855</string>
    <string name="country_cameroon_name">Cameroon</string>
    <string name="country_cameroon_code">cm</string>
    <string name="country_cameroon_number" translatable="false">237</string>
    <string name="country_canada_name">Canada</string>
    <string name="country_canada_code">ca</string>
    <string name="country_canada_number" translatable="false">1</string>
    <string name="country_cape_verde_name">Cape Verde</string>
    <string name="country_cape_verde_code">cv</string>
    <string name="country_cape_verde_number" translatable="false">238</string>
    <string name="country_caribbean_netherlands_name">Caribbean Netherlands</string>
    <string name="country_caribbean_netherlands_code">bq</string>
    <string name="country_caribbean_netherlands_number" translatable="false">599</string>
    <string name="country_cayman_islands_name">Cayman Islands</string>
    <string name="country_cayman_islands_code">ky</string>
    <string name="country_cayman_islands_number" translatable="false">1</string>
    <string name="country_central_african_republic_name">Central African Republic</string>
    <string name="country_central_african_republic_code">cf</string>
    <string name="country_central_african_republic_number" translatable="false">236</string>
    <string name="country_chad_name">Chad</string>
    <string name="country_chad_code">td</string>
    <string name="country_chad_number" translatable="false">235</string>
    <string name="country_chile_name">Chile</string>
    <string name="country_chile_code">cl</string>
    <string name="country_chile_number" translatable="false">56</string>
    <string name="country_china_name">China</string>
    <string name="country_china_code">cn</string>
    <string name="country_china_number" translatable="false">86</string>
    <string name="title_settings">Settings</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_more">More</string>
    <string name="how_was_this_song">How was %s song?</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="remarks">Remarks</string>
    <string name="change_app_lang">Change app language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="birthday">Birthday</string>
    <string name="full_name">Full name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <string name="send">Send</string>
</resources>