<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_setting">

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.wpits.merhaba.activity.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wpits.merhaba.activity.ui.home.HomeFragment"

        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.wpits.merhaba.activity.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.wpits.merhaba.activity.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/more_fragment" />
</navigation>