<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="phonenumberui.PhoneNumberActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_bg"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_light_bg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:textColor="@color/textColorHead"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="@dimen/margin_5"
            >


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorHead"
                android:layout_toRightOf="@+id/ll_cc"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:textColor="@color/textColorHead"
            android:text="@string/birthday"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="@dimen/margin_5"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"

            >


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/edtBirthYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:textColor="@color/textColorHead"
            android:text="@string/sex"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_5"
            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:textSize="20dp"
                    android:textColor="@color/textColorHead"
                    style="@style/MyRadioButtonStyle"

                    />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:textColor="@color/textColorHead"
                    style="@style/MyRadioButtonStyle"
                    android:textSize="20dp"
                    android:drawableTint="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/margin_20"
                    />
            </RadioGroup>


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:textColor="@color/textColorHead"
            android:text="@string/city"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/margin_20"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="@dimen/margin_5"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"

            >


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                />

        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendConfirmationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_red_rectangle"
            android:padding="6dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/backgroundLight"
            android:textSize="18sp" />
    </LinearLayout>



</RelativeLayout>
