<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/screen"
        android:scaleType="centerCrop"/>


    <android.support.v7.widget.CardView
        android:id="@+id/cardlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/usernamelayout">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/login_username"
                    android:inputType="number"
                    android:textColor="@color/textColorHead"
                    android:maxLength="10"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/usernamelayout"
                android:id="@+id/password_entry_layout">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass"
                    android:inputType="text"
                    android:visibility="gone"
                    android:textColor="@color/textColorHead"
                    android:textColorHint="@color/textColorHead"/>
            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/otpVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_entry_layout"
                android:text="@string/sign_in"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>



    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/toolbarlogo_new"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/stroke"
        android:adjustViewBounds="true"
        android:layout_marginBottom="15dp"
        />

</RelativeLayout>