<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/float_transparent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:gravity="center"
        android:background="@color/float_transparent"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-30dp"
            android:background="@color/float_transparent"
            android:src="@drawable/popup_star"
            android:elevation="@dimen/margin_14"
            >
        </ImageView>


        <LinearLayout
            android:id="@+id/linearlayoutTopPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:orientation="vertical"
            android:background="@drawable/bg_round_popup"
            >

            <TextView
                android:id="@+id/textViewHowWasClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:textSize="@dimen/margin_14"
                android:text="@string/how_was_this_song"
                android:textColor="@color/theme_dark_text"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/ratingStar1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star_blank"
                    />
                <ImageView
                    android:id="@+id/ratingStar2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star_blank"
                    android:layout_marginLeft="@dimen/margin_10"
                    />
                <ImageView
                    android:id="@+id/ratingStar3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star_blank"
                    android:layout_marginLeft="@dimen/margin_10"

                    />
                <ImageView
                    android:id="@+id/ratingStar4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star_blank"
                    android:layout_marginLeft="@dimen/margin_10"

                    />
                <ImageView
                    android:id="@+id/ratingStar5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star_blank"
                    android:layout_marginLeft="@dimen/margin_10"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewRatingCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:textSize="@dimen/margin_14"
                android:text="" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_edit_text"
    android:layout_margin="@dimen/margin_10"

    >
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorHead"
        android:layout_toRightOf="@+id/ll_cc"
        android:backgroundTint="@android:color/transparent"
        android:inputType="text"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:hint="@string/remarks"

        />



</LinearLayout>

            <TextView
                android:id="@+id/textViewNotNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_normal"
                android:background="@drawable/theme_bottom_text_button_light_grey"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="@dimen/button_letter_spacing"
                android:text="@string/submit_rating"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/text_medium"
                android:layout_below="@+id/linearlayoutTopPart"

                />

        </LinearLayout>




    </RelativeLayout>

</RelativeLayout>
